# cf-cl

./: README.md  exp.sh  pyproject.toml
config/: config.yaml
logs/tb_data/mnist_ewc_ni/: events.out.tfevents.1757844124.vsc-32-gpu-0.734297.0
logs/tb_data/mnist_multiband_ni/: events.out.tfevents.1757845582.vsc-32-gpu-0.741156.0
logs/tb_data/mnist_naive_ni/: events.out.tfevents.1757842907.vsc-32-gpu-0.728809.0
logs/tb_data/mnist_replay_ni/: events.out.tfevents.1757843482.vsc-32-gpu-0.731444.0
logs/tb_data/mnist_scratch_ni/: events.out.tfevents.1757836318.vsc-32-gpu-0.697927.0  events.out.tfevents.1757842328.vsc-32-gpu-0.726183.0
logs/tb_data/splitcifar10_ewc/: events.out.tfevents.1757842051.vsc-32-gpu-0.724539.0
logs/tb_data/splitcifar10_multiband/: events.out.tfevents.1757842187.vsc-32-gpu-0.725366.0  events.out.tfevents.1757853076.vsc-32-gpu-0.771442.0
logs/tb_data/splitcifar10_naive/: events.out.tfevents.1757841779.vsc-32-gpu-0.722953.0
logs/tb_data/splitcifar10_replay/: events.out.tfevents.1757841916.vsc-32-gpu-0.723757.0
logs/tb_data/splitcifar10_scratch/: events.out.tfevents.1757841644.vsc-32-gpu-0.722141.0
logs/tb_data/splitmnist_ewc/: events.out.tfevents.1757841175.vsc-32-gpu-0.719197.0
logs/tb_data/splitmnist_multiband/: events.out.tfevents.1757841476.vsc-32-gpu-0.720996.0  events.out.tfevents.1757855262.vsc-32-gpu-0.779720.0
logs/tb_data/splitmnist_naive/: events.out.tfevents.1757840895.vsc-32-gpu-0.717102.0
notebooks/: custom.ipynb  m_mnist.ipynb  synthetic_dataset.ipynb
src/: utils.py
src/cf_cl/: utils.py
(+33 files in other folders)
