[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
cf-cl = { path = "src" }

[project]
name = "cf-cl"
version = "0.1.0"
description = "Contiual LEarning on Generative Models who build p(x) such as VAEs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "avalanche-lib==0.6.0",
    "ipykernel>=6.30.1",
    "torch>=2.7.1",
]

[project.optional-dependencies]
code-quality = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[dependency-groups]
lint = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.isort]
profile = "black"
